daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
     app: mango
  template:
    metadata:
      labels:
        app: mango
    spec:
      containers:
      - name: con1
        image: nginx
        ports:
        - containerPort: 80
