deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydep
  labels:
    app: mydep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mydep
  template:
    metadata:
      labels:
        app: mydep
    spec:
      containers:
      - name: con1
        image: nginx:latest
        ports:
        - containerPort: 80
