nodeAntiAffinityrequire.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aff-req
  labels:
    app: myapp
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: color
            operator: NotIn ## to make it anti affinity use NotIn operator here....
            values:
            - red
