nodelabel.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodelabel-pod
  labels: 
    app: nodelabel
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  nodeSelector:
    cpu: ryzen
