nodename.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodename-pod
  labels: 
    app: nodename
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  nodeName: node3
