pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels: 
    app: myapp
    env: dev
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
