podAffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aff-prefpod
  labels:
    app: mango
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  affinity:
    podAffinity:  ## affinty antiaffinity can be defined here ........
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 50
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: app
              operator: In
              values:
              - myapp
          topologyKey: kubernetes.io/hostname
