pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: myapp
    env: dev
spec:
  volumes:
    - name: myvol
      persistentVolumeClaim:
        claimName: mypvc
  containers:
    - name: con1
      image: nginx:latest
      ports:
      - containerPort: 80
      volumeMounts:
      - mountPath: /data
        name: myvol
