resourc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: myapp
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
    resources:
      requests:
        cpu: "150m"
        memory: "128Mi"
      limits:  
        cpu: "500m"
        memory: "256Mi"
