serviceaccount-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: orange
  labels: 
    app: myapp
    env: dev
  namespace: devops
spec:
  serviceAccountName: mango
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
