volume-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sec-vol
  labels:
    app: mydb
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: myvol
      mountPath: /app
  volumes:
  - name: myvol
    secret:
      secretName: test
