configMap-volume.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: myapp
  labels:
    app: myapp
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: myvol
      mountPath: /usr/share/nginx/html
  volumes:
  - name: myvol
    configMap:
      name: myindex
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
spec:
  type: NodePort
  selector:
    app: myapp
  ports: 
  - port: 80
