emptyDir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydep
  labels:
    app: mydep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mydep
  template:
    metadata:
      labels:
        app: mydep
    spec:
      containers:
      - name: con1
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: myvol
          mountPath: /data
      - name: con2
        image: tomcat:latest
        ports:
        - containerPort: 8080
        volumeMounts: 
        - name: myvol
          mountPath: /path
      volumes:
      - name: myvol
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  type: NodePort
  selector:
    app: mydep
  ports:
  - port: 80
    protocol: TCP
    targetPort: 30123
