readyness-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depreadhttp
spec:
  replicas: 1
  selector:
    matchLabels:
     app: mango
  template:
    metadata:
      labels:
        app: mango
    spec:
      containers:
      - name: con1
        image: nginx
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /index.html1 #wrong file name to fail probe 
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /index.html1 #wrong file name to fail probe
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  type: NodePort
  selector:
    app: mango
  ports:
  - port: 80
    protocol: TCP
    nodePort: 30123
