replicaSet.yaml
apiVersion: v1
kind: Service
metadata:
  name: myrs-svc
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - port: 80
    protocol: TCP
