service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: mypod-svc
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - name: con1
    port: 80
    protocol: TCP
  - name: con2
    port: 8080
    protocol: TCP
    targetPort: 8080
