ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-ress
spec:
  tls:
  - hosts:
      - abcd.com
    secretName: app       # <-- Secret containing cert.pem and key.pem
  ingressClassName: nginx
  rules:
  - host: abcd.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mango
            port:
              number: 80
